# FFB_Simulator

./: .gitignore  CMakeLists.txt  FFB_Simulator.cpp  FFB_Simulator.vcxproj  FFB_Simulator.vcxproj.filters  README.md  packages.config
.github/: copilot-instructions.md
.github/workflows/: build.yml  msbuild.yml
ffbsimulator/: .gitignore  CMakeLists.txt  FFB_Simulator.cpp  FFB_Simulator.sln  FFB_Simulator.vcxproj  build.bat  build.ps1
ffbsimulator/linux/: FFB_Simulator
ffbsimulator/linux/src/: FFB_Simulator.cpp
ffbsimulator/win/: FFB_Simulator.sln  FFB_Simulator.vcxproj  FFB_Simulator.vcxproj.filters  build.bat
ffbsimulator/win/src/: FFB_Simulator.cpp
